# Chibikuri.github.io

./: .gitignore  Dockerfile  README.md  app-4b699f12d49e8b35771c5b0c481207ac3c3b5b63af70c6b51fc0e93b384c4e49f66c3440e1b5ce0a1640acd49c5591c4.js  app-4b699f12d49e8b35771c5b0c481207ac3c3b5b63af70c6b51fc0e93b384c4e49f66c3440e1b5ce0a1640acd49c5591c4_bg.wasm  app-5dec7f6481a696bf1e0212904e822e410d0e8ab2db6b0b1da1f57e018b9e5e38e0f11be289e72f53ffd9d60ffe62ec9a.js  app-5dec7f6481a696bf1e0212904e822e410d0e8ab2db6b0b1da1f57e018b9e5e38e0f11be289e72f53ffd9d60ffe62ec9a_bg.wasm  app-6350d4d4df4ddf9094d73c849049bf324984efc44f0686f25a3ab6d0cd91d10bef22ec26bdc03fc823130210810b8548.js  app-6350d4d4df4ddf9094d73c849049bf324984efc44f0686f25a3ab6d0cd91d10bef22ec26bdc03fc823130210810b8548_bg.wasm  app-93221ad003c568629a727fcca51f48be58b78b222603d5783e7a9fb3d913f1f14fe53fe989444d14ff91354f48f419dc.js  app-93221ad003c568629a727fcca51f48be58b78b222603d5783e7a9fb3d913f1f14fe53fe989444d14ff91354f48f419dc_bg.wasm  docker-compose.yml  index.html  style-465e1c41c962cf3c.css
.github/workflows/: gh-pages.yml
app/: Cargo.toml  Trunk.toml  index.html  style.css
app/assets/: test.html
app/script/: pre_build.rs
app/src/: main.rs  markdown_parser.rs  router.rs
app/src/components/: list.rs  markdown.rs  summary.rs
app/src/fetcher/: fetch.rs  markdown_parser.rs
app/src/pages/: footer.rs  header.rs  home.rs  tech_note.rs  tech_notes_index.rs
notes/: test.md
