[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.5.0"
markdown = "1.0.0-alpha.16"
pulldown-cmark = "0.9.3"
wasm-bindgen-futures = "0.4.39"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }


[[bin]]
name="pre"
path="script/pre_build.rs"
